--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: darkblue;
+    background: rgb(210, 210, 248);
     color: #fff;
     font-family: Arial;
     overflow: hidden;
@@ -19,7 +19,7 @@
   #box {
     width: 80px;
     height: 80px;
-    background: whitesmoke;
+    background: rgb(26, 17, 17);
     border-radius: 10px;
     position: absolute;
     cursor: pointer;
@@ -30,13 +30,14 @@
     position: fixed;
     top: 20px;
     font-size: 24px;
+    color:maroon;
   }
 </style>
 </head>
 <body>
 
 <h1>คะแนน: <span id="score">0</span></h1>
-<div id="box"></div>
+<div id="box"></div> 
 
 <script>
   const box = document.getElementById("box");
@@ -65,3 +66,4 @@
 
 </body>
 </html>
+
